@@ -10,6 +10,9 @@ all changes without author attribution are by Doug MacEachern
 
 =item 1.21_01-dev
 
+$Apache::Registry::NameWithVirtualHost fix
+[John Hughes <john@Calva.COM>]
+
 allow Apache::PerlRun::handler to be subclassed
 [Yasushi Nakajima <sey@jkc.co.jp>]
 
